test/sh/error/func/bad_expr_param.sk
f(b: Bool) {
	# do nothing
}

f(1 + 2)
